<resources>
    <string name="app_name">JC Mobile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="welcomeText">"Welcome to JumpCalc Mobile!"</string>
    <string name="welcomeTextP1">"This is an simple app, designed for assist in planning your co-op route in the Elite: Dangerous." </string>
    <string name="welcomeTextP2">"JumpCalc calculates the amount of time for each of your team ship to get to the specified destination." </string>
    <string name="welcomeTextP3">"You'll need to know your and your team member's ship LY range, the distance between route start and end points, and the total number of jumps. All these parameters you can get in Galaxy Map View in Elite:Dangerous "</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Enter_parameters_screen"> Enter parameters</string>
    <string name="Submit">Submit</string>
    <string name="Enter_value">input_value</string>
    <string name="welcome">Welcome!</string>
    <string name="first_section">First ship parameters</string>
    <string name="second_section">Second ship parameters</string>
    <string name="route_section">Route details</string>
    <string name="distance">Distance in LY</string>
    <string name="input_ly">Ship range in LY</string>
    <string name="clear">Clear</string>
    <string name="input_ship_name">Ship callsign / class</string>
    <string name="input_jumps_count">Jumps count</string>
    <string name="add_randomize">Add random factor</string>
    <string name="save_results">Save results</string>
    <string name="ed_logo">ED Logo</string>
    <string name="menuShowWS">Show tutorial</string>
    <string name="mainMenyLTVBtn">Load test values</string>
    <string name="title_activity_result_screen">ResultScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="RS_header">Calculation Results</string>
    <string name="RSfirstShipName">%s: %s</string>
    <string name="RSsecondShipName">%s: %s</string>
    <string name="RStotalDistance">Total distance: %.1f </string>
    <string name="ws_btn_start">Start tutorial</string>
    <string name="ws_btn_continue_1">Continue</string>
    <string name="ws_ok_btn">"Ok, go! "</string>
</resources>