<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.redshift.jcmobile.MainActivity">
    <item
            android:id="@+id/action_settings"
            android:orderInCategory="102"
            android:title="@string/action_settings"
            app:showAsAction="never" />
    <item
            android:id="@+id/mainMenuShowWSBtn"
            android:checkable="false"
            android:title="@string/menuShowWS" />
    <item
            android:id="@+id/mainMenuLTVBtn"
            android:title="@string/mainMenyLTVBtn" />
    <item
            android:id="@+id/mainMenuClearBtn"
            android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/clear"
            android:visible="true" />
</menu>